# KatEngine___

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/src/kat/: Engine.cpp
libs/: CMakeLists.txt
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: gl.h
libs/stb_impl/: CMakeLists.txt
sample/: CMakeLists.txt
sample/src/: main.cpp
src/kat/: base.cpp  base.hpp  fwd.hpp  utils.hpp
src/kat/common/: common.cpp  common.hpp
src/kat/common/data/: CPUImage.cpp  CPUImage.hpp
src/kat/common/math/: geometry.hpp
src/kat/common/os/: Input.cpp  Input.hpp  Monitor.cpp  Monitor.hpp  Window.cpp  Window.hpp  setup.cpp  setup.hpp
src/kat/common/os/shared/: GLFWMonitor.cpp  GLFWMonitor.hpp  GLFWWindow.cpp  GLFWWindow.hpp
src/kat/platform/wayland/: WaylandWindow.cpp  WaylandWindow.hpp
src/kat/platform/windows/: WindowsMonitor.cpp  WindowsMonitor.hpp  WindowsWindow.cpp  WindowsWindow.hpp
src/kat/platform/x11/: X11Window.cpp  X11Window.hpp
